[gd_scene load_steps=18 format=2]

[ext_resource path="res://Sprites/Viral_Creatures_Pack2/1000%Scaling/PNGs/Shielded/Shielded4.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Viral_Creatures_Pack2/1000%Scaling/PNGs/Shielded/Shielded5.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Viral_Creatures_Pack2/1000%Scaling/PNGs/Shielded/Shielded6.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Viral_Creatures_Pack2/1000%Scaling/PNGs/Shielded/Shielded3.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Viral_Creatures_Pack2/1000%Scaling/PNGs/Shielded/Shielded7.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Viral_Creatures_Pack2/1000%Scaling/PNGs/Shielded/Shielded8.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Viral_Creatures_Pack2/1000%Scaling/PNGs/Shielded/Shielded1.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Viral_Creatures_Pack2/1000%Scaling/PNGs/Shielded/Shielded2.png" type="Texture" id=8]
[ext_resource path="res://Sprites/warped-files/PNG/sprites/Fx/enemy-death/enemy-death-5.png" type="Texture" id=9]
[ext_resource path="res://Sprites/warped-files/PNG/sprites/Fx/enemy-death/enemy-death-2.png" type="Texture" id=10]
[ext_resource path="res://Sprites/warped-files/PNG/sprites/Fx/enemy-death/enemy-death-4.png" type="Texture" id=11]
[ext_resource path="res://Sprites/warped-files/PNG/sprites/Fx/enemy-death/enemy-death-3.png" type="Texture" id=12]
[ext_resource path="res://Sprites/warped-files/PNG/sprites/Fx/enemy-death/enemy-death-1.png" type="Texture" id=13]
[ext_resource path="res://Prefabs/Enemies/Virus.gd" type="Script" id=14]

[sub_resource type="CircleShape2D" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "Closed_eye",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "Closing_eye",
"speed": 2.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 9 ) ],
"loop": true,
"name": "Death",
"speed": 10.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 4 ) ],
"loop": true,
"name": "Opening_eye",
"speed": 1.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="CircleShape2D" id=3]

[node name="Virus" type="Area2D"]
scale = Vector2( 0.7, 0.7 )
gravity = 0.0
script = ExtResource( 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 20, 20 )
shape = SubResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Closed_eye"

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
scale = Vector2( 20, 20 )
shape = SubResource( 3 )

[node name="UpDownChangeTimer" type="Timer" parent="."]
wait_time = 0.214
one_shot = true

[connection signal="area_entered" from="DamageArea" to="." method="_on_DamageArea_area_entered"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_DamageArea_body_entered"]
